--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,10 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "Stationary Objects"
+excerpt: "This oil painting was made during my last summer at UCSB. I was just about to learn how to paint an oil painting
+<br/><img src='/images/art.png'>"
 collection: portfolio
 ---
+Professor Yumiko taught us this ART 10 Oil Painting course. I was impressed by her patient and careful teaching styles.
+This course extended my interest in paintings, and I will continue with some artworks in the future.
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+<! This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML.
