--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "Stationary Objects"
-excerpt: "This oil painting was made during my last summer at UCSB. I was just about to learn how to paint an oil painting
+excerpt: "This oil painting was made during my last summer at UCSB. I was just about to learn how to paint an oil painting.
 <br/><img src='/images/art.png'>"
 collection: portfolio
 ---
